ensure the second section on mobile does not obscure the background image of the intro section.

--- a/app/styles/responsive.css
+++ b/app/styles/responsive.css
@@ -103,7 +103,7 @@ background-image: url(../images/trial.png),  linear-gradient(to bottom,  rgba(11
 	}
 
 	.section-intro-wrapper{
-	padding-bottom: 230.65%;
+	padding-bottom: 347.65%;
 
 	}
 	.section-text-above-video h3{
